Increase z-index on tertiary div to ensure footer widgets are always clickable.

--- a/assets/stylesheets/layout/_structure.scss
+++ b/assets/stylesheets/layout/_structure.scss
@@ -184,7 +184,7 @@
 	position: relative;
 	table-layout: fixed; // Prevents select elements from getting all spilly
 	width: 100%;
-	z-index: 1000;
+	z-index: 10000;
 
 	.widget {
 		border-top: none;
