--- a/style.css
+++ b/style.css
@@ -4493,7 +4493,7 @@ blockquote .widget cite:not(.widget-title),
   position: relative;
   table-layout: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 10000;
 }
 #tertiary .widget {
   border-top: none;
